manifests/bootstrap/dev/ubuntu/ubuntu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ubuntu
      app.kubernetes.io/instance: ubuntu
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: ubuntu
      labels:
        app.kubernetes.io/name: ubuntu
        app.kubernetes.io/instance: ubuntu
    spec:
      containers:
      - name: ubuntu
        image: ubuntu
        imagePullPolicy: Always
        command: ['sh', '-c', 'while true; do sleep 6000; done']
        resources:
          limits:
            cpu: 1000m
            memory:  1280Mi
          requests:
            cpu: 50m
            memory:  100Mi
