manifests/bootstrap/dev/ubuntu/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "ubuntu"
  namespace: monitoring
spec:
  description: "Ubuntu"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ubuntu
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: nginx
        app.kubernetes.io/instance: demoapp
